--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -9,7 +9,8 @@
         <title>Mirage</title>
 
         <script type="text/javascript" src="{% static "mirage_site/js/jquery-2.1.1.min.js" %}"></script>
-        
+        <script type="text/javascript" src="{% static "mirage_site/js/mirage.js" %}"></script>
+
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
         <!--[if lte IE 8]>
