--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 
 {% block body %}
+<div class="pure-g">
+    <div class="pure-u-1">
+    hello
+    </div>
+</div>
+
 <div id="layout" class="pure-g">
     
     <div class="sidebar pure-u-1 pure-u-md-1-4">
-        <div class="header">    
-    
+        <div class="header">        
             <form id="naics-search" class="pure-form">
-                <input id="naics-code" type="text" placeholder="NAICS shortcode" class="pure-input-rounded">
-                <button type="submit" class="pure-button">Search</button>
+                <select id="naics-code">
+                    <option value="" disabled selected>Select NAICS code</option>
+                </select>
             </form>
         </div>
     </div>
@@ -22,11 +28,11 @@
 
 <script type="text/javascript">
 
-    $("#naics-search").submit(function(event) {
+    $("#naics-code").change(function(event) {
         var code = $('#naics-code').val();
         
-        $.getJSON('/api/vendors?naics=' + code, function(data) {
-            $("#results").append('<pre>' + JSON.stringify(data, null, 4) + '</pre>');
+        $.getJSON('/api/vendors/?naics=' + code, function(data) {
+            $("#results").html('<pre>' + JSON.stringify(data, null, 4) + '</pre>');
         });
 
         return false; 
