--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -3,6 +3,40 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+html    {
+    min-width:1080px;
+}
+
+#container  {
+    width:1100px;
+    margin-left:auto;
+    margin-right:auto;
+    background-color:#ffcc33;
+}
+#header {
+    width:100%;
+    background-color:#88cc33;
+}
+#search {
+    
+    padding:15px;
+}
+#filter {
+    width:180px;
+    background-color: #88cc33;
+    float:left;
+    height:600px;
+}
+#results_container  {
+    float:left;
+}
+#results_header {
+    width:70px;
+    background-color: #88
+}
+
+
+
 
 a {
     text-decoration: none;
