added select2 to dropdown

--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -10,7 +10,7 @@
         <div id="search">
             <form id="naics-search" class="pure-form">
                 <select id="naics-code">
-                    <option value="" disabled selected>Select NAICS code</option>
+                    <option></option>
                 </select>
             </form>
         </div><!--end search<!-->
