--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -10,9 +10,13 @@
 
         <script type="text/javascript" src="{% static "mirage_site/js/jquery-2.1.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/mirage.js" %}"></script>
+        <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
 
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/base-min.css">
+        <link rel="stylesheet" href="{% static "mirage_site/css/select2.css" %}" />
+
+
         <!--[if lte IE 8]>
             <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css">
         <![endif]-->
