--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -57,29 +57,24 @@
         </div><!--end search<!-->
     </div><!--end header<!-->
 
-    <div id="filter">
-        <h3 class="filter_title">Filters</h3>
 
-            <div id="filterbox">
-            <form class="pure-form pure-form-stacked filterbox">
+    <div id="filter_container">
+    <h3 class="filter_title">Filters</h3>
+        <div id="filter" class="filterbox">
+            <form id="setaside-filters" class="pure-form pure-form-stacked">
                 <fieldset>
-                    <label for="setaside1">
-                        <input id="setaside1" type="checkbox"> Setaside 1
-                    </label>
-                    <label for="setaside2">
-                        <input id="setaside2" type="checkbox"> Setaside 2
-                    </label>
-                    <label for="setaside3">
-                        <input id="setaside3" type="checkbox"> Setaside 3
-                    </label>
-                    <label for="setaside4">
-                        <input id="setaside4" type="checkbox"> Setaside 4
-                    </label>
-                </fieldset>
-            </form>
-            </div><!--end filterbox<!-->
+                    <label class="pure-checkbox" for="vet"><input type="checkbox" id="vet" name="vet" value="A5" />Veteran Owned</label>
+                    <label class="pure-checkbox" for="smalldis"><input type="checkbox" id="smalldis" name="smalldis" value="27" />Small, Disadvantaged Business</label>
+                    <label class="pure-checkbox" for="disvet"><input type="checkbox" id="disvet" name="disvet" value="QF" />Service Disabled Veteran Owned</label>
+                    <label class="pure-checkbox" for="woman"><input type="checkbox" id="woman" name="woman" value="A2" />Woman Owned</label>
+                    <label class="pure-checkbox" for="hub"><input type="checkbox" id="hub" name="hub" value="XX" />HUBZone</label>
+                    <label class="pure-checkbox" for="8a"><input type="checkbox" id="8a" name="8a" value="A6" />8(a)</label>
+                </form>
+            </fieldset>
+        </div><!--end filter<!-->
+    </div><!--end filter_container<!-->
 
-    </div><!--end filter<!-->
+
 
     <div id="results_container">
 
@@ -93,7 +88,7 @@
             </div><!--end select_vehicle<!-->
 
             <div id="number_of_results">
-                <span class="matching_your_search">123 vendors in 4 Pools match your search</span>
+                <span id="matching_your_search">123 vendors in 4 Pools match your search</span>
             </div><!--end number_of_results<!-->
 
         </div><!--end results_header<!-->
@@ -105,7 +100,13 @@
                     <li><a href="#">Sub section</a></li>
                     <li>The page you are on right now</li>
                 </ul>
+
+                <div id="sam_last_updated">
+                    <span id="sam_load" class="sam_style">SAM data updated: 2/4/14</span>
+                </div><!--end sam_last_updated<!-->
+
             </div><!--end breadcrumbs<!-->
+
 
             <div class="column post-header">
                 <h2 class="pool_title">Pool 1</h2>
