--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -74,7 +74,8 @@
                 </div><!--end filterbox<!-->
             </div><!--end filter<!-->
 
-            <div id="results_container">
+
+            <div id="main_container">
 
                 <div id="results_header">
 
@@ -104,8 +105,34 @@
 
                 </div><!--end breadcrumbs<!-->
 
-            </div><!--end results_container<!-->
+            </div><!--end main_container<!-->
+
+         <!--CUSTOM PAGE CONTENT INSERTS HERE, E.G: !-->            
+            
+            <div id="custom_page_content">
+            </div><!--end custom_page_content<!-->
+
         </div><!--end container<!-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <style>
         /*  #naics-code { width: 100%; }
