--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+
+{% block crumbs %}
+    <li><a href="/">Home</a></li>
+{% endblock %}
+
+{% block content %}
+{% endblock %}
